Swing functional tests added